--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -4,8 +4,17 @@ body {
     box-sizing: border-box;
     font-family: 'Futura PT', Arial, Helvetica, sans-serif;
     font-weight: 500;
-    font-style: normal;
-    overflow-x: hidden;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.container {
+    .row {
+        margin: 0 -15px 0 0;
+    }
 }
 
 .section-blue {
